Test/cli/projectFile/projectFile.dfy.expect
input.dfy(6,8): Warning: Shadowed local-variable name: x

Dafny program verifier did not attempt verification

Dafny program verifier did not attempt verification
Error: property 'warn-shadowing' is of type 'Int64' but should be of type 'Boolean'
input.dfy(6,8): Warning: Shadowed local-variable name: x
moreInput.dfy(6,8): Warning: Shadowed local-variable name: x

Dafny program verifier did not attempt verification
